--- a/esti-commhub/src/app/app.component.html
+++ b/esti-commhub/src/app/app.component.html
@@ -1,1 +1,7 @@
-<div class="container"><h1>Welcome to {{title}}</h1></div>
+<div class="container"><h1>Welcome to {{title}}</h1>
+    <div class="container">
+        <div class="row">
+            <app-articles></app-articles>
+        </div>
+    </div>
+</div>
