added in memory data service, detail page is broken

--- a/unida-commhub/src/app/article-detail/article-detail.component.html
+++ b/unida-commhub/src/app/article-detail/article-detail.component.html
@@ -1,1 +1,11 @@
-<p>article-detail works!</p>
+<div *ngIf="article">
+
+  <h2>{{article.articleTitle | uppercase}} Details</h2>
+  <div><span>Desciption: </span>{{article.articleDesc}}</div>
+  <div>
+    <label>Text:
+      <input [(ngModel)]="article.articleText" placeholder="articleText"/>
+    </label>
+  </div>
+
+</div>
