save new works, but only once..

--- a/unida-commhub/src/app/article-detail/article-detail.component.html
+++ b/unida-commhub/src/app/article-detail/article-detail.component.html
@@ -33,7 +33,7 @@
         <textarea formControlName="articleText">{{article.articleText}}</textarea>
       </div>
       <div>
-        <button (click)="save()">save</button>
+        <button type="submit">save</button>
         <button (click)="cancel()">cancel</button>
       </div>
     </form>
