styling fixes, save new fix, reatached web app to backend, renamed articleId to id

--- a/unida-commhub/src/app/app.component.html
+++ b/unida-commhub/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="display-3">Welcome to {{title}}</h1>
+    <h1 class="display-3">{{title}}</h1>
     <nav>
         <a routerLink="/articles">Home</a>
       </nav>
