--- a/unida-commhub/src/app/article-detail/article-detail.component.html
+++ b/unida-commhub/src/app/article-detail/article-detail.component.html
@@ -7,9 +7,9 @@
       <p>{{article.articleText}}</p>
     </div>
     <div>
-      <button (click)="new()">new</button>
-      <button (click)="edit()">edit</button>
-      <button (click)="delete()">delete</button>
+      <button class="btn btn-link" (click)="new()">new</button>
+      <button class="btn btn-link" (click)="edit()">edit</button>
+      <button class="btn btn-link" (click)="delete()">delete</button>
     </div>
   </div>
 
@@ -33,8 +33,8 @@
         <textarea formControlName="articleText">{{article.articleText}}</textarea>
       </div>
       <div>
-        <button type="submit">save</button>
-        <button (click)="cancel()">cancel</button>
+        <button class="btn btn-link" type="submit">save</button>
+        <button class="btn btn-link" (click)="cancel()">cancel</button>
       </div>
     </form>
   </div>
